RESOLVED FIXED Bug 210600
[GTK] Deprecation-guards fixes
https://bugs.webkit.org/show_bug.cgi?id=210600
Summary [GTK] Deprecation-guards fixes
Claudio Saavedra
Reported 2020-04-16 06:08:47 PDT
[GTK] Deprecation-guards fixes
Attachments
Patch (2.57 KB, patch)
2020-04-16 06:12 PDT, Claudio Saavedra
no flags
Claudio Saavedra
Comment 1 2020-04-16 06:12:46 PDT
EWS
Comment 2 2020-04-16 12:27:52 PDT
Committed r260209: <https://trac.webkit.org/changeset/260209> All reviewed patches have been landed. Closing bug and clearing flags on attachment 396638 [details].
Note You need to log in before you can comment on or make changes to this bug.