[GTK] Deprecation-guards fixes https://bugs.webkit.org/show_bug.cgi?id=210600

Reviewed by Adrian Perez de Castro.

No new tests needed.

* platform/gtk/RenderThemeGadget.cpp:
(WebCore::RenderThemeGadget::backgroundColor const): Add missing
deprecation guards for deprecated GtkStyleContext API.
* platform/gtk/ThemeGtk.cpp:
(WebCore::ThemeGtk::ensurePlatformColors const): Switch to WK
deprecation guards from glib ones.


Canonical link: https://commits.webkit.org/223487@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260209 268f45cc-cd09-0410-ab3c-d52691b4dbfc