Source/WebCore/platform/gtk/RenderThemeGadget.cpp
@@ -121,7 +121,11 @@ Color RenderThemeGadget::color() const
 Color RenderThemeGadget::backgroundColor() const
 {
     GdkRGBA returnValue;
+
+    ALLOW_DEPRECATED_DECLARATIONS_BEGIN
     gtk_style_context_get_background_color(m_context.get(), gtk_style_context_get_state(m_context.get()), &returnValue);
+    ALLOW_DEPRECATED_DECLARATIONS_END
+
     return returnValue;
 }
 
